-Added first focus fading to buttons using Console UI Theme -Added Console UI Theme to Crafting screen -Now, when exiting the Options screen, it'll remember the selected button -Now, the vignetter won't be visible when using the Console UI -Fixed menu pointer having interpolation, making it looks slippery -Fixed menu pointer being off-center in Console UI Theme -Fixed menu pointer not being centered when opening screens with the Console UI Theme -Fixed menu pointer pos not being changed relative to the screen size -Fixed merging issues

--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -232,8 +232,8 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\ContainerScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\inventory\InventoryScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\locale\Language.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\renderer\LogoRenderer.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\renderer\texture\TextureAtlas.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\renderer\LogoRenderer.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\renderer\texture\TextureAtlas.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\resources\ResourcePack.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\resources\ResourcePackManifest.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\resources\ResourcePackRepository.hpp" />
@@ -389,8 +389,8 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\inventory\ContainerScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\inventory\InventoryScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\locale\Language.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\renderer\LogoRenderer.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\renderer\texture\TextureAtlas.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\renderer\LogoRenderer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\renderer\texture\TextureAtlas.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\resources\ResourcePack.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\resources\ResourcePackManifest.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\resources\ResourcePackRepository.cpp" />
