use the existing files

--- a/platforms/windows/CMakeLists.txt
+++ b/platforms/windows/CMakeLists.txt
@@ -31,7 +31,7 @@ add_executable(reminecraftpe WIN32
     LoggerWin32.cpp
     AppPlatform_win32.cpp
     main.cpp
-    icon.rc
+    MinecraftClient.Win32.rc
 )
 
 # Core
