--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -274,6 +274,7 @@ jobs:
             uses: actions/checkout@v6
             with:
                 submodules: true
+          - uses: ilammy/msvc-dev-cmd@v1
           - name: Build
-            run: ${{ '"C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat" && msbuild projects\MinecraftClient.Win32\MinecraftClient.Win32.vcxproj /p:PlatformToolset=v143 /p:Configuration=Debug' }}
+            run: msbuild projects\MinecraftClient.Win32\MinecraftClient.Win32.vcxproj /p:PlatformToolset=v143 /p:Configuration=Debug'
             working-directory: platforms/windows
