Android APK Signing (#407)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -180,9 +180,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                include:
-                  - name: Native
-                    directory: platforms/android/project
+                include: # TODO: switch to exclusively native android once it's fixed.
+                  # - name: Native
+                  #   directory: platforms/android/project
+                  - name: SDL 2
+                    directory: platforms/sdl/sdl2/android
         name: Android (${{ matrix.name }})
         runs-on: ubuntu-24.04
         steps:
@@ -200,8 +202,17 @@ jobs:
             run: |
                 cd ${{ matrix.directory }}
                 ./gradlew assembleRelease
-                cd $GITHUB_WORKSPACE
-                mv platforms/android/project/app/build/outputs/apk/release/app-release-unsigned.apk ReMCPE.apk
+          - uses: upup-company/apksigner-android@v1
+            id: sign_apk
+            with:
+              releaseDirectory: ${{ matrix.directory }}/app/build/outputs/apk/release
+              signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE }}
+              keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+              alias: remcpe
+            env:
+              BUILD_TOOLS_VERSION: 33.0.1
+          - name: Rename APK
+            run: mv ${{ steps.sign_apk.outputs.signedReleaseFile }} ReMCPE.apk
           - uses: alexellis/upload-assets@0.4.1
             env:
               GITHUB_TOKEN: ${{ github.token }}
