--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -214,9 +214,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                include:
-                  - name: Native
-                    directory: platforms/android/project
+                include: # TODO: switch to exclusively native android once it's fixed.
+                  # - name: Native
+                  #   directory: platforms/android/project
+                  - name: SDL 2
+                    directory: platforms/sdl/sdl2/android
         name: Android (${{ matrix.name }})
         runs-on: ubuntu-24.04
         steps:
@@ -234,10 +236,21 @@ jobs:
             run: |
                 cd ${{ matrix.directory }}
                 ./gradlew assembleRelease
+          - uses: upup-company/apksigner-android@v1
+            id: sign_apk
+            with:
+              releaseDirectory: ${{ matrix.directory }}/app/build/outputs/apk/release
+              signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE }}
+              keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+              alias: remcpe
+            env:
+              BUILD_TOOLS_VERSION: 33.0.1
+          - name: Rename APK
+            run: mv ${{ steps.sign_apk.outputs.signedReleaseFile }} ReMCPE.apk
           - uses: actions/upload-artifact@v6
             with:
               name: Android (${{ matrix.name }})
-              path: platforms/android/project/app/build/outputs/apk/release/app-release-unsigned.apk
+              path: ReMCPE.apk
 
     mingw:
         strategy:
