--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/gzuidhof/coi-serviceworker.git
 [submodule "thirdparty/SDL-src"]
 	path = thirdparty/SDL2/src
-	url = https://github.com/libsdl-org/SDL.git
+	url = https://github.com/Un1q32/SDL.git
 [submodule "thirdparty/stb_image/include"]
 	path = thirdparty/stb_image/include
 	url = https://github.com/nothings/stb.git
